src/test/ui/const-generics/const-expression-missing-braces.stderr
error: expected one of `,` or `>`, found `3`
  --> $DIR/const-expression-missing-braces.rs:9:17
   |
LL |     foo::<BAR + 3>();
   |                 ^ expected one of `,` or `>`
   |
help: to write a `const` expression, surround it with braces for it to be unambiguous
   |
LL |     foo::<{ BAR + 3 }>();
   |           ^         ^

error: `const` generic expressions without braces are not supported
  --> $DIR/const-expression-missing-braces.rs:15:11
   |
LL |     foo::<3 + 3>();
   |           ^^^^^
   |
   = note: only literals are supported as `const` generic without braces
help: surround `const` expressions with braces
   |
LL |     foo::<{ 3 + 3 }>();
   |           ^       ^

error: expected one of `,` or `>`, found `-`
  --> $DIR/const-expression-missing-braces.rs:18:15
   |
LL |     foo::<BAR - 3>();
   |               ^ expected one of `,` or `>`
   |
help: to write a `const` expression, surround it with braces for it to be unambiguous
   |
LL |     foo::<{ BAR - 3 }>();
   |           ^         ^

error: expected one of `,` or `>`, found `-`
  --> $DIR/const-expression-missing-braces.rs:21:15
   |
LL |     foo::<BAR - BAR>();
   |               ^ expected one of `,` or `>`
   |
help: to write a `const` expression, surround it with braces for it to be unambiguous
   |
LL |     foo::<{ BAR - BAR }>();
   |           ^           ^

error: `const` generic expressions without braces are not supported
  --> $DIR/const-expression-missing-braces.rs:24:11
   |
LL |     foo::<100 - BAR>();
   |           ^^^^^^^^^
   |
   = note: only literals are supported as `const` generic without braces
help: surround `const` expressions with braces
   |
LL |     foo::<{ 100 - BAR }>();
   |           ^           ^

error: expected one of `,` or `>`, found `(`
  --> $DIR/const-expression-missing-braces.rs:27:19
   |
LL |     foo::<bar<i32>()>();
   |                   ^ expected one of `,` or `>`
   |
help: to write a `const` expression, surround it with braces for it to be unambiguous
   |
LL |     foo::<{ bar<i32>() }>();
   |           ^            ^

error: expected one of `,` or `>`, found `(`
  --> $DIR/const-expression-missing-braces.rs:30:21
   |
LL |     foo::<bar::<i32>()>();
   |                     ^ expected one of `,` or `>`
   |
help: to write a `const` expression, surround it with braces for it to be unambiguous
   |
LL |     foo::<{ bar::<i32>() }>();
   |           ^              ^

error: expected one of `,` or `>`, found `(`
  --> $DIR/const-expression-missing-braces.rs:33:21
   |
LL |     foo::<bar::<i32>() + BAR>();
   |                     ^ expected one of `,` or `>`
   |
help: to write a `const` expression, surround it with braces for it to be unambiguous
   |
LL |     foo::<{ bar::<i32>() + BAR }>();
   |           ^                    ^

error: expected one of `,` or `>`, found `(`
  --> $DIR/const-expression-missing-braces.rs:36:21
   |
LL |     foo::<bar::<i32>() - BAR>();
   |                     ^ expected one of `,` or `>`
   |
help: to write a `const` expression, surround it with braces for it to be unambiguous
   |
LL |     foo::<{ bar::<i32>() - BAR }>();
   |           ^                    ^

error: expected one of `,` or `>`, found `-`
  --> $DIR/const-expression-missing-braces.rs:39:15
   |
LL |     foo::<BAR - bar::<i32>()>();
   |               ^ expected one of `,` or `>`
   |
help: to write a `const` expression, surround it with braces for it to be unambiguous
   |
LL |     foo::<{ BAR - bar::<i32>() }>();
   |           ^                    ^

error: expected one of `,` or `>`, found `-`
  --> $DIR/const-expression-missing-braces.rs:42:15
   |
LL |     foo::<BAR - bar::<i32>()>();
   |               ^ expected one of `,` or `>`
   |
help: to write a `const` expression, surround it with braces for it to be unambiguous
   |
LL |     foo::<{ BAR - bar::<i32>() }>();
   |           ^                    ^

error: likely `const` expression parsed as trait bounds
  --> $DIR/const-expression-missing-braces.rs:12:11
   |
LL |     foo::<BAR + BAR>();
   |           ^^^^^^^^^ parsed as trait bounds but traits weren't found
   |
help: if you meant to write a `const` expression, surround the expression with braces
   |
LL |     foo::<{ BAR + BAR }>();
   |           ^           ^

error: aborting due to 12 previous errors

